# AoC

./: .gitignore  CMakeLists.txt
lib/: arr_util.cpp  arr_util.dec.h  arr_util.h  color_tools.cpp  color_tools.h
src/: build_flags.txt
src/1/: main.cpp  main.h
